<resources>
    <string name="app_name">App Viajes</string>
    <string name="title_activity_drawer">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">A Viajar!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_password">Password</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_viajes">Viajes</string>
    <string name="menu_pasajeros">Pasajeros</string>
    <string name="menu_reservas">Reservas</string>
    <string name="menu_cierreSesion">Cerrar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
