<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_viajes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_viajes" />
        <item
            android:id="@+id/nav_pasajeros"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pasajeros" />
        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_reservas" />
    </group>

    <item android:title="Sesión">
        <menu>
            <item
                android:id="@+id/nav_cerrarSesion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_cierreSesion" />
            <item
                android:id="@+id/nav_password"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_password" />
        </menu>
    </item>

</menu>
