<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.androidempresaviajes.ui.perfil.PerfilFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_password"
        android:name="com.example.androidempresaviajes.ui.changePassword.PasswordFragment"
        android:label="@string/menu_password"
        tools:layout="@layout/fragment_password" />

    <fragment
        android:id="@+id/nav_viajes"
        android:name="com.example.androidempresaviajes.ui.viajes.ViajesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_viajes" />

    <fragment
        android:id="@+id/nav_cerrarSesion"
        android:name="com.example.androidempresaviajes.ui.cerrarSesion.CerrarSesionFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_cerrar_sesion" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.androidempresaviajes.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_reservas"
        android:name="com.example.androidempresaviajes.ui.reservas.ReservasFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_reservas" />

    <fragment
        android:id="@+id/nav_pasajeros"
        android:name="com.example.androidempresaviajes.ui.pasajeros.PasajerosFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_pasajeros" />
</navigation>